# DSSCDevices

./: .coveragerc  .gitignore  .gitlab-ci.yml  .install.sh  CMakeLists.txt  DEPENDS  Makefile  README.md  README.rst  pyproject.toml  setExternals.sh  setup.py  svn.externals  updateDevices.sh
DsscDataReceiver/: CMakeLists.txt
DsscDependencies/: CMakeLists.txt
DsscDependencies/src/: DsscDependencies.cpp  DsscDependencies.h
DsscDependencies/src/Minuit2/: build.sh
DsscDependencies/src/libCHIPInterface/: CHIPFullConfig.cpp  CHIPFullConfig.h  CHIPGainConfigurator.cpp  CHIPGainConfigurator.h  CHIPInterface.cpp  CHIPInterface.h  CHIPTrimmer.cpp  CHIPTrimmer.h  CMakeLists.txt  CalibrationDataGenerator.cpp  CalibrationDataGenerator.h  F2BCHIPInterface.cpp  F2BCHIPInterface.h  F2CHIPInterface.cpp  F2CHIPInterface.h  LOGO.h  LOGO_DEPFET.h  LOGO_DEPFET.xcf  LOGO_DSSCXFEL.h  LOGO_DSSCXFEL.xcf  MultiModuleInterface.cpp  MultiModuleInterface.h  PPTFullConfig.cpp  PPTFullConfig.h
DsscDependencies/src/libConfigReg/: CMakeLists.txt  ConfigReg.cpp  ConfigReg.h  ConfigSignals.cpp  ConfigSignals.h  ModuleSet.cpp  ModuleSet.h
DsscDependencies/src/libDsscHdf5/: CMakeLists.txt  DsscHDF5CalibrationDB.cpp  DsscHDF5CalibrationDB.h  DsscHDF5CalibrationDataGenerator.cpp  DsscHDF5CalibrationDataGenerator.h  DsscHDF5CorrectionFileReader.cpp  DsscHDF5CorrectionFileReader.h  DsscHDF5MeanRMSReader.cpp  DsscHDF5MeanRMSReader.h  DsscHDF5MeasurementInfoReader.cpp  DsscHDF5MeasurementInfoReader.h  DsscHDF5MeasurementInfoWriter.cpp  DsscHDF5MeasurementInfoWriter.h  DsscHDF5Packer.cpp  DsscHDF5Packer.h  DsscHDF5Reader.cpp  DsscHDF5Reader.h  DsscHDF5ReceiveThread.h  DsscHDF5ReceiveWidget.cpp  DsscHDF5ReceiveWidget.h  DsscHDF5Receiver.cpp  DsscHDF5Receiver.h  DsscHDF5RegisterConfig.hh  DsscHDF5TrainDataReader.cpp  DsscHDF5TrainDataReader.h  DsscHDF5TrimmingDataReader.cpp  DsscHDF5TrimmingDataReader.h  DsscHDF5TrimmingDataWriter.cpp  DsscHDF5TrimmingDataWriter.h  DsscHDF5Writer.cpp  DsscHDF5Writer.h  DsscLifeImageWidget.h  ImagePreview.cpp  ImagePreview.h  LPDHDf5Structure.txt  QDsscHDF5PackerWidget.cpp  QDsscHDF5PackerWidget.h  SelASICPixelsWidget.cpp  SelASICPixelsWidget.h
DsscDependencies/src/libDsscHdf5/hdf5ConverterProc/: CMakeLists.txt  main.cpp
DsscDependencies/src/libDsscHdf5/proc/: CMakeLists.txt  main.cpp
DsscDependencies/src/libPPT/: CMakeLists.txt  DSSC_PPT.cpp  DSSC_PPT.h  DSSC_PPT_FTP.cpp  DSSC_PPT_FTP.h  SC.h
DsscDependencies/src/libPPTDataReceiver/: CMakeLists.txt  DsscPacketReceiverNoSort.cpp  DsscPacketReceiverNoSort.h  DsscPacketReceiverSimple.cpp  DsscPacketReceiverSimple.h  DsscTrainSorter.cpp  DsscTrainSorter.h  RingStorage.hh  ThreadSafeQueue.hh  TrainDataRingStorage.hh
DsscDependencies/src/libSequencer/: CMakeLists.txt  Sequencer.cpp  Sequencer.h  SequencerTrack.cpp  SequencerTrack.h
DsscDependencies/src/libUtils/: AsicDataIterator.cpp  AsicDataIterator.h  CMakeLists.txt  DataHisto.cpp  DataHisto.h  DsscCalibrationDB.cpp  DsscCalibrationDB.h  DsscGainParamMap.cpp  DsscGainParamMap.h  DsscModuleInfo.cpp  DsscModuleInfo.h  DsscProgressBar.cpp  DsscProgressBar.h  DsscSramBlacklist.cpp  DsscSramBlacklist.h  DsscTrainData.cpp  DsscTrainData.hh  DsscTrainDataProcessor.cpp  DsscTrainDataProcessor.h  DsscTrainDataTypes.hh  FitUtils.cpp  FitUtils.h  PixelDataArray.cpp  PixelDataArray.h  SimUtils.cpp  SimUtils.h  SimpleThreadSafeQueue.cpp  SimpleThreadSafeQueue.h  SpectrumFitResult.cpp  SpectrumFitResult.h  VariableIterator.cpp  VariableIterator.h  utils.cpp  utils.h
DsscDependencies/src/libUtils/prog/: CMakeLists.txt  main.cpp
DsscLadderParameterTrimming/: CMakeLists.txt
DsscLadderParameterTrimming/ConfigFiles/: F2_PixelRegisters.txt  IOBConfig.txt  PPT_EPCRegs.txt
DsscLadderParameterTrimming/src/: DsscLadderParameterTrimming.cc  DsscLadderParameterTrimming.hh  DsscTrimPptAPI.cc  DsscTrimPptAPI.hh
DsscPpt/: CMakeLists.txt
DsscPpt/ConfigFiles/: DSSC_PPT_TOP.txt  DSSC_PPT_TOP_loader1_v1_0.txt  F1_JtagRegs.txt  F1_PixelRegisters.txt  F1_Sequencer.xml  F2Buffer_Module_2_pxRegs.xml  F2Buffer_iob.xml  F2Buffer_seq.xml  F2Init_Module_1_jtagRegs.xml  F2Ladder.conf  F2Ladder_Module_1_jtagRegs.xml  F2_JtagRegs.txt  F2_PixelRegisters.txt  F2_Sequencer.xml  IOBConfig.txt  IOB_Firmware.bit  IOB_Firmware.xsvf  Init.conf  PPT_EPCRegs.txt
DsscPpt/src/: DSSC_PPT_API.cpp  DSSC_PPT_API.h  DsscConfigHashWriter.cc  DsscConfigHashWriter.hh  DsscPpt.cc  DsscPpt.hh  DsscPptAPI.cc  DsscPptAPI.hh  DsscPptRegsInit.hh
DsscPpt/src/Buckup/: DsscPpt.cc
DsscPpt/src/tests/: DsscPpt_App.cc
src/: CMakeLists.txt
src/ConfigFiles/: DSSC_PPT_TOP_loader1.txt  DSSC_PPT_TOP_v1_0.txt  F1_JtagRegs.txt  F1_PixelRegisters.txt  F1_PixelRegisters0.txt  F1_Sequencer.xml  F2Buffer.conf  F2Buffer_Module_1_jtagRegs.xml  F2Buffer_Module_1_pxRegs.xml  F2Buffer_epc.xml  F2Init_Module_1_pxRegs.xml  F2Init_Module_2_jtagRegs.xml  F2Init_Module_3_jtagRegs.xml  F2Init_epc.xml  F2Init_iob.xml  F2Init_seq.xml  F2Ladder_Module_1_pxRegs.xml  F2Ladder_epc.xml  F2Ladder_iob.xml  F2Ladder_seq.xml  IOB_Firmware.txt  simpleImage.xilinx.txt
src/DsscControl/: DsscASICreset.py  configurator.py  dsscConfSetter.py  dssc_control.py  schemata.py  sib.py  state_combiner.py  take_data.py  utils.py  veto_checker.py
src/DsscControl/scenes/: asic_reset_scene.py  configurator_scene.py  take_data_scene.py  veto_scene.py
src/DsscPpt/: DsscConfigHashWriter.cc  DsscConfigHashWriter.hh  DsscPpt.cc  DsscPpt.hh  DsscPptAPI.hh  DsscPptRegsInit.hh  DsscPptScenes.hh
src/DsscProcessor/: DsscProcessor.cc  DsscProcessor.hh
src/DsscSIB/: DsscSIB.py
src/LadderParameterTrimming/: DsscKaraboRegisterConfig.hh  DsscLadderParameterTrimming.cc  DsscLadderParameterTrimming.hh  DsscTrimPptAPI.hh
src/tests/: testDsscPpt.cc  testLadderParameterTrimming.cc
src/tests/c++/: testDsscPpt.cc  testLadderParameterTrimming.cc  testPPTScenes.cc
src/tests/python/: conftest.py  sample_veto_pattern.py  test_asic_reset.py  test_configurator.py  test_control.py  test_dssc_control.py  test_sib.py  test_state_combiner.py  test_utils.py  test_veto.py  test_veto_checker.py
(+38 files in other folders)
